tests/snapshots/tui_snapshots__confirm_clean_snapshot.snap
---
source: tests/tui_snapshots.rs
expression: output
---
┌ Rusty Sweeper ───────────────────────────────────────────────────────────────┐
│ /project  0 B                                                                │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│▼ project                                                   [░░░░░░░░░░] 0 B  │
│  ► target                                                  [░░░░░░░░░░] 0 B  │
│                                                                              │
│                                                                              │
│              ┌ Clean Project ─────────────────────────────────┐              │
│              │            Clean build artifacts in            │              │
│              │                   '/project'?                  │              │
│              │                                                │              │
│              │                   [y]es  [n]o                  │              │
│              │                                                │              │
│              └────────────────────────────────────────────────┘              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
                                 [y] Yes  [n] No
