tests/snapshots/tui_snapshots__confirm_delete_snapshot.snap
---
source: tests/tui_snapshots.rs
expression: output
---
┌ Rusty Sweeper ───────────────────────────────────────────────────────────────┐
│ /test  1000 KiB                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│▼ test                                                 [██████████] 1000 KiB  │
│    important.txt                                        [██████████] 1000 KiB│
│                                                                              │
│                                                                              │
│              ┌ Delete ────────────────────────────────────────┐              │
│              │          Delete '/test/important.txt'?         │              │
│              │                                                │              │
│              │                 Size: 1000 KiB                 │              │
│              │                                                │              │
│              │                   [y]es  [n]o                  │              │
│              └────────────────────────────────────────────────┘              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
                                 [y] Yes  [n] No
