tests/snapshots/tui_snapshots__help_overlay_snapshot.snap
---
source: tests/tui_snapshots.rs
assertion_line: 83
expression: output
---
┌ Rusty Sweeper ───────────────────────────────────────────────────────────────┐
│ /home/user  ...                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│         ┌ Help ────────────────────────────────────────────────────┐         │
│         │                                                          │         │
│         │ NAVIGATION                                               │         │
│         │ ─────────────────────────────────                        │         │
│         │ ↑/k        Move up                                       │         │
│         │ ↓/j        Move down                                     │         │
│         │ →/l/Enter  Expand directory                              │         │
│         │ ←/h/Bksp   Collapse / Go to parent                       │         │
│         │ Space      Toggle expand/collapse                        │         │
│         │ g          Go to top                                     │         │
│         │ G          Go to bottom                                  │         │
│         │                                                          │         │
│         │ ACTIONS                                                  │         │
│         │ ─────────────────────────────────                        │         │
│         │ d          Delete selected                               │         │
│         │ c          Clean project artifacts                       │         │
│         │ r          Refresh / Rescan                              │         │
│         │                                                          │         │
│         │ VIEW                                                     │         │
│         │ ─────────────────────────────────                        │         │
│         │ /          Search / Filter                               │         │
│         └──────────────────────────────────────────────────────────┘         │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
                                   [Esc] Close
