tests/snapshots/tui_snapshots__nested_tree_snapshot.snap
---
source: tests/tui_snapshots.rs
assertion_line: 177
expression: output
---
┌ Rusty Sweeper ───────────────────────────────────────────────────────────────┐
│ /nonexistent/snapshot/path  768 B                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│▼ path                                [██████████] 768 B                      │
│  ▼ subdir                            [██████░░░░] 512 B                      │
│      nested.txt                        [██████░░░░] 512 B                    │
│    top.txt                             [███░░░░░░░] 256 B                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[↑↓] Navigate  [←→] Expand  [d] Delete  [c] Clean  [/] Search  [?] Help  [q] Qui
