tests/snapshots/tui_snapshots__project_indicator_snapshot.snap
---
source: tests/tui_snapshots.rs
expression: output
---
┌ Rusty Sweeper ───────────────────────────────────────────────────────────────┐
│ /projects  0 B                                                               │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│▼ projects                                             [░░░░░░░░░░]        0 B│
│  ► my-rust-app [Rust]                                 [░░░░░░░░░░]        0 B│
│  ► my-node-app [npm]                                  [░░░░░░░░░░]        0 B│
│  ► documents                                          [░░░░░░░░░░]        0 B│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[↑↓] Navigate  [←→] Expand  [d] Delete  [c] Clean  [/] Search  [?] Help  [q] Qui
