tests/snapshots/tui_snapshots__scanning_state_snapshot.snap
---
source: tests/tui_snapshots.rs
assertion_line: 47
expression: output
---
┌ Rusty Sweeper ───────────────────────────────────────────────────────────────┐
│ /home/user  ...                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│                                  Scanning...                                 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[↑↓] Navigate  [←→] Expand  [d] Delete  [c] Clean  [/] Search  [?] Help  [q] Qui
