tests/snapshots/tui_snapshots__search_mode_snapshot.snap
---
source: tests/tui_snapshots.rs
assertion_line: 92
expression: output
---
┌ Rusty Sweeper ───────────────────────────────────────────────────────────────┐
│ /home/user  ...                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│                               No matches found                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ┌ Search ──────────────────────────────────────────────────┐                 │
│ │/test                                                     │                 │
│ └──────────────────────────────────────────────────────────┘                 │
└──────────────────────────────────────────────────────────────────────────────┘
                          [Enter] Confirm  [Esc] Cancel
