tests/snapshots/tui_snapshots__status_message_snapshot.snap
---
source: tests/tui_snapshots.rs
assertion_line: 143
expression: output
---
┌ Rusty Sweeper ───────────────────────────────────────────────────────────────┐
│ /test  ...                                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│                                    No data                                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
                        Operation completed successfully
