tests/snapshots/tui_snapshots__system_resources_snapshot.snap
---
source: tests/tui_snapshots.rs
assertion_line: 252
expression: output
---
┌ Rusty Sweeper ───────────────────────────────────────────────────────────────┐
│ /nonexistent/snapshot/path  1 KiB                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│⚙ Docker Build Cache (314 items)                                    290.53 MiB│
│⚙ Docker Images (78 items)                                           10.60 GiB│
│──────────────────────────────────────────────────────────────────────────────│
│▼ path                                                 [██████████]      1 KiB│
│    file.txt                                           [██████████]      1 KiB│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[↑↓] Navigate  [←→] Expand  [d] Delete  [c] Clean  [/] Search  [?] Help  [q] Qui
