tests/snapshots/tui_snapshots__with_tree_snapshot.snap
---
source: tests/tui_snapshots.rs
expression: output
---
┌ Rusty Sweeper ───────────────────────────────────────────────────────────────┐
│ /test  3 KiB                                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│▼ test                                                    [██████████] 3 KiB  │
│    file2.txt                                               [██████░░░░] 2 KiB│
│    file1.txt                                               [███░░░░░░░] 1 KiB│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[↑↓] Navigate  [←→] Expand  [d] Delete  [c] Clean  [/] Search  [?] Help  [q] Qui
